# P5_Deployez_un_modele_de_ML

./: .gitignore  README.md  Test_nb_col_pipeline.ipynb  activate_env_p5_ml.bat  app.py  gradio_app.py  pyproject.toml  requirements.txt  setup_etape4.ps1
.github/workflows/: ci.yml
app/api/: README_API.md  predict.py  schemas.py  serve_fastapi.py
app/models/: dummy_data.py  feature_names.py  load_pipeline.py  pipeline.joblib
app/utils/: binary_mapper.py
docs/: API_FastAPI.md  README-standards.md  schema_base_donnees.md
docs/ci-cd/: definition-workflow.md
docs/sql/: schema_base_donnees.md
notebooks/: P4-EDA_Feature_Engineering_072025.ipynb  P4-REFACTO_EDA_Feature_Engineering.ipynb  P4_Pipeline_ML_072025.ipynb  P4_Pipeline_ML_final.ipynb  P4_REFACTO_Pipeline_ML.ipynb  Vanspeybrock_Fabrice_2_NoteBook_EDA_Feature_Engineering_072025.ipynb  Vanspeybrock_Fabrice_3_NoteBook_Pipeline_ML_072025.ipynb  shap_values_class1.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/data/: employes_net.csv  employes_net_refacto.csv
sql/: README.md
tests/: test_pipeline.py
