[project]
name = "P5_Déployez_un_modèle_de_Machine_Learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "jupyterlab>=4.4.2,<5.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "numpy>=2.2.0,<2.3.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "missingno>=0.5.2,<1.0.0",
    "xgboost>=3.0.2,<4.0.0",
    "catboost>=1.2.8,<2.0.0",
    "category-encoders>=2.8.1,<3.0.0",
    "imbalanced-learn>=0.13.0,<0.14.0",
    "shap>=0.48.0,<0.49.0",
    "uvicorn (>=0.35.0,<0.36.0)"
]
